In Assignment - 2/a2.html, fixed a bug by changing "control group" to "controlgroup". In Assignment - 2/css/themes/a2.css, I've changed the padding to get the required gap between the ui-blocks.

--- a/Assignment - 2/css/themes/a2.css
+++ b/Assignment - 2/css/themes/a2.css
@@ -5,8 +5,8 @@
 
 .ui-block-a,
 .ui-block-b {
-  padding-left: 5px;
-  padding-right: 5px;
+  padding-left: 12px;
+  padding-right: 12px;
   padding-top: 10px;
   padding-bottom: 10px;
 }
